--- a/Pages/Login.razor
+++ b/Pages/Login.razor
@@ -16,11 +16,13 @@
                 <div class="card-body">
                     <h2 class="text-left mx-2">Iniciar sesión</h2>
                     <EditForm Model="@user">
+                        <DataAnnotationsValidator />
+                        <ValidationSummary />
                         <div class="form-floating mb-3">
                             <InputText @bind-Value="@user.Username" type="text" class="form-control" id="user"
                                 placeholder="Nombre de usuario"></InputText>
-
                             <label for="user">Nombre de usuario</label>
+                            
                         </div>
                         <div class="form-floating mb-3">
                             <InputText @bind-Value="@user.Password" type="password" class="form-control" id="password"
@@ -71,6 +73,7 @@
     {
         var res = await http.PostAsJsonAsync<UserModel>("api/login", user);
         token = await res.Content.ReadFromJsonAsync<TokenModel>();
+
         if (token.Success == 1)
         {
             userLogged = 1;
