--- a/Pages/Sugerencias/Index.razor
+++ b/Pages/Sugerencias/Index.razor
@@ -25,7 +25,7 @@
 
 <h4>¿Tienes alguna idea o sugerencia para mejorar el servicio de transporte público? Presenta tu sugerencia!</h4>
 <div class="button_">
-    <a class="btn btn-success" href="sugerencia/form">Presentar sugerencia</a>
+    <a class="btn btn-success" href="login">Presentar sugerencia</a>
 </div>
 
 <div class="shadow p-3 mb-5 bg-body rounded w-100 mt-4">
