--- a/Pages/Login.razor
+++ b/Pages/Login.razor
@@ -7,7 +7,7 @@
 <PageTitle>Iniciar sesión</PageTitle>
 
 <section class="d-flex justify-content-center ">
-    <div class="card mb-3 shadow p-3 mb-2 bg-body rounded w-75" style="max-width: 1020px;">
+    <div class="w-75" style="max-width: 1020px;">
         <div class="row g-0">
             <div class="col-md-4">
                 <img src="\images\bus.jpeg" class="img-fluid rounded-start" alt="...">
