--- a/Pages/Quejas/Index.razor
+++ b/Pages/Quejas/Index.razor
@@ -29,7 +29,7 @@
 
 <h4>¿Tienes alguna mala experiencia que desees compartir con la comunidad? Cuéntanos presetentando tu queja!</h4>
 <div class="button_">
-    <a class="btn btn-danger" href="queja/form">Presentar queja</a>
+    <a class="btn btn-danger" href="login">Presentar queja</a>
 </div>
 
 <div class="shadow p-3 mb-5 bg-body rounded w-100 mt-4">
@@ -55,7 +55,8 @@
                         <td scope="col">@queja.Descripcion</td>
                         <td scope="col">@queja.FechaRegistro</td>
                         <td scope="col">
-                            <button class="btn btn-outline-dark" @onclick="() => showQueja(queja.Id)"><i><img
+                            <button class="btn btn-outline-dark" @onclick="() => showQueja(queja.Id)">
+                                <i><img
                                 src="https://img.icons8.com/material-outlined/24/000000/edit--v1.png" /></i></button>
                         </td>
                     </tr>
