--- a/Pages/Login.razor
+++ b/Pages/Login.razor
@@ -4,7 +4,7 @@
 @using System.Net.Http.Json;
 @inject NavigationManager nav
 
-<PageTitle>Iniciar sesión</PageTitle>
+<PageTitle>Inicio sesión</PageTitle>
 
 <section class="d-flex justify-content-center ">
     <div class="w-75" style="max-width: 1020px;">
