--- a/Pages/Register.razor
+++ b/Pages/Register.razor
@@ -4,7 +4,7 @@
 @using System.Net.Http.Json;
 @inject NavigationManager nav
 
-<PageTitle>Registrar usuario</PageTitle>
+<PageTitle>Registro usuario</PageTitle>
 
 <section class="d-flex justify-content-center ">
     <div class="card mb-3 shadow p-3 mb-2 bg-body rounded w-75" style="max-width: 1020px;">
