--- a/Pages/Admin/Sugerencias/Index.razor
+++ b/Pages/Admin/Sugerencias/Index.razor
@@ -29,7 +29,7 @@
                 {
                     <tr>
                         <td scope="col">@sugerencia.Descripcion</td>
-                        <td scope="col">@sugerencia.FechaRegistro</td>
+                        <td scope="col">@(sugerencia.FechaRegistro.ToString("yyyy-MM-dd"))</td>
                         <td scope="col">
                             <button class="btn btn-outline-dark" @onclick="() => showSugerencia(sugerencia.Id)"><i><img
                                 src="https://img.icons8.com/material-outlined/24/000000/edit--v1.png" /></i></button>
