--- a/Pages/Ciudadano/Index.razor
+++ b/Pages/Ciudadano/Index.razor
@@ -1,18 +1,19 @@
 @page "/panel_ciudadano/{id:int}/{token}"
 
 @inject NavigationManager nav
+@layout CiudadanoLayout
 
 <PageTitle>Panel ciudadano</PageTitle>
 
 <div class="container w-50 mb-2">
-    <h4 class="text-center">Panel ciudadano</h4>
+    <h3 class="text-center">Panel ciudadano</h3>
 </div>
 
 <hr>
 <div class="container">
     <div class="row">
         <div class="col">
-            <div class="card text-center">
+            <div class="card text-center shadow p-3 mb-5 bg-body rounded">
                 <div class="card-body">
                     <h5 class="card-title">Mis quejas</h5>
                     <p class="card-text">En este apartado tendrás acceso a las quejas que has registrado dentro del
@@ -23,7 +24,7 @@
             </div>
         </div>
         <div class="col">
-            <div class="card text-center">
+            <div class="card text-center shadow p-3 mb-5 bg-body rounded">
                 <div class="card-body">
                     <h5 class="card-title">Mis sugerencias</h5>
                     <p class="card-text">En este apartado tendrás acceso a las sugerencias que has registrado dentro del
