--- a/Pages/Ciudadano/Quejas/Index.razor
+++ b/Pages/Ciudadano/Quejas/Index.razor
@@ -7,8 +7,12 @@
 @using System.Net.Http.Json
 @inject HttpClient http
 @inject NavigationManager nav
+@layout CiudadanoLayout
 
 <h3 class="text-center">Gestión de mis quejas</h3>
+<div class="button_">
+    <button @onclick="Regresar" class="btn btn-outline-primary">Regresar al panel ciudadano</button>
+</div>
 <div class="shadow p-3 mb-5 bg-body rounded w-100 mt-4">
     @if (quejas != null)
     {
@@ -26,9 +30,9 @@
                 {
                     <tr>
                         <td scope="col">@queja.MotivoQueja</td>
-                        <td scope="col">@queja.FechaHechos</td>
+                        <td scope="col">@(queja.FechaHechos.ToString("yyyy-MM-dd"))</td>
                         <td scope="col">@queja.Descripcion</td>
-                        <td scope="col">@queja.FechaRegistro</td>
+                        <td scope="col">@(queja.FechaRegistro.ToString("yyyy-MM-dd"))</td>
                         <td scope="col">
                             <button class="btn btn-outline-dark" @onclick="() => showQueja(queja.Id)"><i><img
                                 src="https://img.icons8.com/material-outlined/24/000000/edit--v1.png" /></i></button>
@@ -59,5 +63,9 @@
     void showQueja(int id)
     {
         nav.NavigateTo($"queja/{id}");
+    }
+    void Regresar()
+    {
+        nav.NavigateTo($"panel_ciudadano/{Id}/{Token}");
     }
 }
