--- a/Shared/Footer.razor
+++ b/Shared/Footer.razor
@@ -1,10 +1,10 @@
-<footer class="text-center text-white mt-5" style="background-color: #343a40;">
+<footer class="footer text-center text-white" style="background-color: #343a40;">
     <!-- Grid container -->
-    <div class="container p-4"></div>
+    <div class="container p-1"></div>
     <!-- Grid container -->
-    <img src="\images\orgullo-utm.png" style="width: 15rem; height: auto;">
+    <img src="\images\orgullo-utm.png" style="width: 8rem; height: auto;">
     <!-- Copyright -->
-    <div class="text-center p-3" style="background-color: #343a40;">
+    <div class="text-center p-1" style="background-color: #343a40;">
         © 2022 Copyright:
         <a class="text-white" href="https://www.utmerida.edu.mx/">www.utmerida.edu.mx</a>
     </div>
