--- a/Shared/Nav.razor
+++ b/Shared/Nav.razor
@@ -9,16 +9,16 @@
     <div class="d-flex justify-content-end" id="navbarColor02">
       <ul class="navbar-nav me-auto">
         <li class="nav-item">
-          <a class="nav-link h5" href="/">Inicio</a>
+          <a class="nav-link h5" href="/"><img src="\images\home.png" style="width: 1rem; height: auto;"> Inicio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link h5" href="/quejas">Quejas</a>
+          <a class="nav-link h5" href="/quejas"><img src="\images\exclamation.png" style="width: 1rem; height: auto;"> Quejas</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link h5" href="/sugerencias">Sugerencias</a>
+          <a class="nav-link h5" href="/sugerencias"><img src="\images\idea.png" style="width: 1rem; height: auto;"> Sugerencias</a>
         </li>
            <li class="nav-item">
-          <a class="nav-link h5" href="/login">Iniciar sesión</a>
+          <a class="nav-link h5" href="/login"><img src="\images\log-in.png" style="width: 1rem; height: auto;"> Iniciar sesión</a>
         </li>
       </ul>
     </div>
