--- a/Pages/Admin/Quejas/Index.razor
+++ b/Pages/Admin/Quejas/Index.razor
@@ -18,7 +18,7 @@
 <div class="shadow p-3 mb-5 bg-body rounded w-100 mt-4">
     @if (quejas != null)
     {
-        <table class="mytable table w-100">
+        <table class="mytable table w-100 table-hover">
             <thead>
                 <tr>
                     <th scope="col">Ciudadano</th>
@@ -75,3 +75,4 @@
          nav.NavigateTo($"panel_administrativo/{Id}/{Token}");
     }
 }
+
