--- a/Pages/Admin/Sugerencias/Index.razor
+++ b/Pages/Admin/Sugerencias/Index.razor
@@ -16,23 +16,29 @@
 <div class="shadow p-3 mb-5 bg-body rounded w-100 mt-4">
     @if (sugerencias != null)
     {
-        <table class="mytable table">
+        <table class="mytable table table-hover">
             <thead>
                 <tr>
                     <th scope="col">Ciudadano</th>
                     <th scope="col">Descripción</th>
                     <th scope="col">Fecha de registro</th>
+                    <th scope="col">Estado</th>
+                    <th scope="col"></th>
                 </tr>
             </thead>
             <tbody>
                 @foreach (var sugerencia in sugerencias)
                 {
                     <tr>
+                        <td scope="col">@sugerencia.Ciudadano</td>
                         <td scope="col">@sugerencia.Descripcion</td>
                         <td scope="col">@(sugerencia.FechaRegistro.ToString("yyyy-MM-dd"))</td>
+                        <td scope="col">@(sugerencia.Status == 1 ? "Aprobado" : sugerencia.Status == 2 ? "Rechazado" : "Pendiente")</td>
                         <td scope="col">
-                            <button class="btn btn-outline-dark" @onclick="() => showSugerencia(sugerencia.Id)"><i><img
-                                src="https://img.icons8.com/material-outlined/24/000000/edit--v1.png" /></i></button>
+                            <div>
+                                <button @onclick="() => showSugerencia(sugerencia.Id)" type="button"
+                            class="btn btn-primary">Detalles</button>
+                            </div>
                         </td>
                     </tr>
                 }
@@ -55,9 +61,9 @@
     {
         sugerencias = await http.GetFromJsonAsync<IList<SugerenciaModel>>(api);
     }
-    void showSugerencia(int id)
+    void showSugerencia(int sugerencia_id)
     {
-        nav.NavigateTo($"sugerencia/{id}");
+        nav.NavigateTo($"sugerencia/detalles/{sugerencia_id}/auth/{Token}/{Id}");
     }
     void Regresar()
     {
