--- a/Shared/NavCiudadano.razor
+++ b/Shared/NavCiudadano.razor
@@ -9,7 +9,7 @@
         <div class="d-flex justify-content-end" id="navbarColor02">
             <ul class="navbar-nav me-auto">
                 <li class="nav-item">
-                    <a class="nav-link h5" href="/login">Cerrar sesión</a>
+                    <a class="nav-link h5" href="/login"><img src="\images\log-out.png" style="width: 1rem; height: auto;"> Cerrar sesión</a>
                 </li>
             </ul>
         </div>
