--- a/Pages/Admin/Quejas/Detalles.razor
+++ b/Pages/Admin/Quejas/Detalles.razor
@@ -10,7 +10,7 @@
 @if (Id != null && Admin_Id != null)
 {
     <div class="d-flex justify-content-center">
-        <div class="card shadow p-3 mb-5 bg-body rounded" style="width: 38rem;">
+        <div class="details-card card shadow p-3 mb-5 bg-body rounded" style="width: 38rem;">
             <img src="\images\queja.jpg" class="card-img-top rounded mx-auto d-block" style="width: 12rem; height: auto;">
             <div class="card-body">
                 <h5 class="card-title">Motivo: @queja.MotivoQueja</h5>
@@ -29,6 +29,9 @@
                 <button @onclick="Pendiente" class="btn btn-dark">Marcar como pendiente</button>
             </div>
         </div>
+    </div>
+    <div style="height: 4rem;">
+
     </div>
 }
 @code {
