--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -3,20 +3,19 @@
 
 <PageTitle>Inicio</PageTitle>
 
+<div class="img-container w-100">
+    <h2 class="text-center">T'aan bus <small class="text-muted">Hablar del camión</small></h2>
+    <hr>
+    <img class="card-img-top rounded mx-auto d-block" src="\images\bus2.jpg" style="width: 40rem; height: auto;">
+</div>
+
 <div class="d-flex justify-content-center mb-4">
     <div class="row w-100 d-flex">
-        <h2 class="text-center">T'aan bus <small class="text-muted">Hablar del camión</small></h2>
-        <hr>
         <div class="container_taanbus col">
             <div class="row align-items-start">
                 <div class="col">
-                    <p> Somos un grupo estudiantil de la UTM que tiene problemas con el transporte público,
-                        además de
-                        que hemos notado en nuestra presencia en los paraderoros públicos que muchas personas tanto
-                        niños, embarazadas y de la tercera edad los cuáles sufren ciertos problemas al momento de
-                        esperar el camión y en el camión. En nuestro caso hemos tenido problemas personales, en los
-                        paraderos, en el camión, con el personal de transporte además del uso de las credenciales de
-                        este nos ha ocasionado muchos problemas al respecto, discusiones entre otras cosas. </p>
+                    <h4>¿Quiénes somos?</h4>
+                    <p> Somos un grupo de estudiantes que ha sido testigo durante de estos últimos años del deficiente servicio de transporte público presente en nuestra ciudad. Debido a esto, hemos desarrollado esta aplicación web con el objetivo de promover mejores servicios para  la comunidad y mejorar la calidad de vida de todos los ciudadanos.</p>
                 </div>
             </div>
             <div class="container ">
@@ -63,7 +62,7 @@
         </div>
         <div class="col-md-8">
             <div class="card-body">
-                <h4 >¿Por qué es importante el transporte público?</h4>
+                <h4>¿Por qué es importante el transporte público?</h4>
                 <p class="lead">En México diariamente se realizan 130 millones de viajes, mientras que 25% de la
                     población
                     no viaja debido a sus actividades o por la falta de infraestructura, mientras que 80% de los
@@ -82,7 +81,7 @@
         </div>
         <div class="col-md-8">
             <div class="card-body">
-                <h4 >¿Por qué usarlo?</h4>
+                <h4>¿Por qué usarlo?</h4>
                 <p class="lead">
                 <ul>
                     <li>Contamina menos que el vehículo privado. El transporte público es la alternativa más ecológica
@@ -121,4 +120,3 @@
         </div>
     </div>
 </div>
-
