--- a/Pages/Sugerencias/Index.razor
+++ b/Pages/Sugerencias/Index.razor
@@ -8,61 +8,73 @@
 @inject HttpClient http
 @inject NavigationManager nav
 
-
-<h3>Portal de sugerencias</h3>
-<hr>
-<p class="w-75">Aquí podrás dejar tu opinión al respecto del transporte público y los paraderos que estos utilizan
-    ya que todos
-    tenemos ideas al respecto de como este servicio se puede mejorar. Se necesita utilizar los recursos tecnológicos
-    para obetenr más gente, opiniónes además las personas tienen mucha creatividad, esta se puede implementar en el
-    servicio.</p>
-<h4>Objetivo</h4>
-<p class="w-75">Nosotros deseamos que nuestras voces sean escuchadas, el transporte público genera muchos ingresos
-    y estos se pueden
-    seguir invirtiendo para el beneficio de todos, por lo cuál buscamos más ideas innovadoras para que todos podamos
-    disfrutar con mejor calidad el transporte y sus paraderos, queremos alzar nuestra voz por un medio digital actual..
-</p>
-
-<h4>¿Tienes alguna idea o sugerencia para mejorar el servicio de transporte público? Presenta tu sugerencia!</h4>
-<div class="button_">
-    <a class="btn btn-success" href="login">Presentar sugerencia</a>
+<div class="container">
+    <div class="row row-cols-2">
+        <div class="col">
+            <h3>Portal de sugerencias</h3>
+            <p class="w-100">Aquí podrás dejar tu opinión al respecto del transporte público y los paraderos que estos
+                utilizan
+                ya que todos
+                tenemos ideas al respecto de como este servicio se puede mejorar. Se necesita utilizar los recursos
+                tecnológicos
+                para obetenr más gente, opiniónes además las personas tienen mucha creatividad, esta se puede
+                implementar en el
+                servicio.</p>
+            <div>
+                <h4 class="">¿Tienes alguna idea o sugerencia para mejorar el servicio de transporte público? Presenta
+                    tu sugerencia!</h4>
+                <div class="button_ mb-3">
+                    <a class="btn btn-success" href="login">Presentar sugerencia</a>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <img class="" src="\images\idea-2.jpg" style="width: 20rem; height: auto;">
+            <h4>Objetivo</h4>
+            <p class="w-100">Nosotros deseamos que nuestras voces sean escuchadas, el transporte público genera muchos
+                ingresos
+                y estos se pueden
+                seguir invirtiendo para el beneficio de todos, por lo cuál buscamos más ideas innovadoras para que todos
+                podamos
+                disfrutar con mejor calidad el transporte y sus paraderos, queremos alzar nuestra voz por un medio
+                digital actual..
+            </p>
+        </div>
+    </div>
 </div>
 
-<div class="shadow p-3 mb-5 bg-body rounded w-100 mt-4">
-    <h4>Sugerencias registradas</h4>
+<section class="container my-2">
+    <h4 class="text-left">Sugerencias de la comunidad</h4>
     @if (sugerencias != null)
     {
-        <table class="mytable table">
-            <thead>
-                <tr>
-                    <th scope="col">Ciudadano</th>
-                    <th scope="col">Descripción</th>
-                    <th scope="col">Fecha de registro</th>
-                </tr>
-            </thead>
-            <tbody>
+        <div class="w-100 mb-5" style="height: auto">
+            <div class="row row-cols-4">
                 @foreach (var sugerencia in sugerencias)
                 {
-                    <tr>
-                        <td scope="col">@sugerencia.Descripcion</td>
-                        <td scope="col">@sugerencia.FechaRegistro</td>
-                        <td scope="col">
-                            <button class="btn btn-outline-dark" @onclick="() => showSugerencia(sugerencia.Id)"><i><img
-                                src="https://img.icons8.com/material-outlined/24/000000/edit--v1.png" /></i></button>
-                        </td>
-                    </tr>
+                    <div class="col">
+                        <div class="card text-dark bg-light mb-3 shadow p-3 mb-5 bg-body rounded" style="max-width: 18rem;">
+                            <div class="card-header">Sugerencia</div>
+                            <div class="card-body">
+                                <h5 class="card-title">@sugerencia.Descripcion</h5>
+                            </div>
+                        </div>
+                    </div>
                 }
-            </tbody>
-        </table>
+            </div>
+        </div>
     }
     else
     {
         <p><em>Cargando...</em></p>
     }
+</section>
+<div style="height: 5rem;">
+
 </div>
 
+
 @code {
-    private readonly string api = "api/sugerencia";
+    private readonly string api = "api/sugerencia/aprobadas";
     private IList<SugerenciaModel>? sugerencias;
 
     protected override async Task OnInitializedAsync()
