--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -8,12 +8,12 @@
     </div>
 
     <main>
-        <article class="content px-4">
+        <article class="content px-2">
             @Body
         </article>
     </main>
 
-    <div>
+    <footer>
         <Footer></Footer>
-    </div>
+    </footer>
 </div>
