--- a/Shared/Nav.razor
+++ b/Shared/Nav.razor
@@ -12,13 +12,16 @@
           <a class="nav-link h5" href="/"><img src="\images\home.png" style="width: 1rem; height: auto;"> Inicio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link h5" href="/quejas"><img src="\images\exclamation.png" style="width: 1rem; height: auto;"> Quejas</a>
+          <a class="nav-link h5" href="/quejas"><img src="\images\exclamation.png" style="width: 1rem; height: auto;">
+            Quejas</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link h5" href="/sugerencias"><img src="\images\idea.png" style="width: 1rem; height: auto;"> Sugerencias</a>
+          <a class="nav-link h5" href="/sugerencias"><img src="\images\idea.png" style="width: 1rem; height: auto;">
+            Sugerencias</a>
         </li>
-           <li class="nav-item">
-          <a class="nav-link h5" href="/login"><img src="\images\log-in.png" style="width: 1rem; height: auto;"> Iniciar sesión</a>
+        <li class="nav-item">
+          <a class="nav-link h5" href="/login"><img src="\images\log-in.png" style="width: 1rem; height: auto;"> Iniciar
+            sesión</a>
         </li>
       </ul>
     </div>
